[package]
name = "grpc"
version = "0.1.0"
authors = ["jmjoy <918734043@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
prost = "0.6.1"
tonic = "0.2.0"

[build-dependencies]
anyhow = "1.0.26"
glob = "0.3.0"
tonic-build = "0.2.0"
